[package]
name = "arch_pbp_installer"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
flate2 = "1.1.1"
indicatif = "0.17.11"
tokio-tar ="0.3.1"
async-compression = {version = "0.4.22", features = ["gzip", "tokio"]}
[dependencies.reqwest]
version = "0.12.11"
default-features = false
features = ["http2","charset","rustls-tls"]
[dependencies.tokio]
version = "1.44.2"
features = ["full"]
